tests/fixtures/errors/crossfile_err.z
# E0200 in the DEP unit: the "-->" line and snippet must come from
# crossfile_dep.z, not this (main) file.
main: function is {
    n: crossfile_dep.depwork
    print "\{n}"
}
